<resources>
    <string name="app_name">ContactsProject</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="show_all_contacts">Show All Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="find_contact">Find Contact</string>
    <string name="sort_contacts_a_z">Sort Contacts A - Z</string>
    <string name="sort_contacts_z_a">Sort Contacts Z - A</string>
</resources>
